--- a/kernel/boot/Makefile
+++ b/kernel/boot/Makefile
@@ -2,7 +2,7 @@ boot : boot.S
 	nasm -f bin boot.S -o boot.bin
 
 qemu : boot
-	qemu-system-x86_64 boot.bin
+	qemu-system-x86_64 -fda boot.bin
 
 clean :
 	rm -rf *.bin
