PAE paging enabled

--- a/kernel/boot/Makefile
+++ b/kernel/boot/Makefile
@@ -1,8 +1,8 @@
 boot : boot.S
-	nasm -f bin boot.S -o boot.bin
+	nasm -f bin boot.S -o boot
 
 qemu : boot
-	qemu-system-x86_64 -fda boot.bin
+	qemu-system-x86_64 -fda boot
 
 clean :
-	rm -rf *.bin
+	rm -rf boot
