better vga, handle newline

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -7,10 +7,10 @@ ASM = nasm
 
 INC = -Iinc/
 SRC = $(shell find . -type f -name "*.c")
-ASM_SRC = $(shell find . -type f -name "*.asm")
+ASM_SRC = $(shell find . -type f -name "*.S")
 
 # CRITICAL: assembly must be linked first
-OBJ = ${ASM_SRC:.asm=.o} ${SRC:.c=.o} 
+OBJ = ${ASM_SRC:.S=.o} ${SRC:.c=.o} 
 
 CCFLAGS = -ggdb -c -ffreestanding -target x86_64-none-elf
 LDFLAGS = -Ttext 0x8200
@@ -28,7 +28,7 @@ kernel.elf: ${OBJ}
 %.o: %.c
 	${CC} ${CCFLAGS} ${INC} -o $@ $^
 
-%.o: %.asm
+%.o: %.S
 	${ASM} $< ${ASFLAGS} -o $@
 
 clean:
