--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -2,14 +2,13 @@
 CC = clang
 GDB = gdb 
 
-LD = ld.lld
+LD = /usr/local/Cellar/llvm/12.0.1/bin/ld.lld
 ASM = nasm
 
 INC = -Iinc/
 SRC = $(shell find . -type f -name "*.c")
 ASM_SRC = $(shell find . -type f -name "*.S")
 
-# CRITICAL: assembly must be linked first
 OBJ = ${ASM_SRC:.S=.o} ${SRC:.c=.o} 
 
 CCFLAGS = -ggdb -c -ffreestanding -target x86_64-none-elf
